cmake_minimum_required(VERSION 3.10)
project(All_Homeworks VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


add_subdirectory(15_refactoring)
add_subdirectory(1_november)
add_subdirectory(27_november)
add_subdirectory(3009_cpp_compilation)
add_subdirectory(app_module)


